[workspace]
members = [
    "bin/interpreter",
    "bin/lexer",
    "bin/parser"
]

[package]
name = "my_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { path = "bin/interpreter" }
lexer = { path = "bin/lexer" }
parser = { path = "bin/parser" }